# c4d-to-pixi-encoder

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ANIMATED_REMOVAL_LOG.md  CLAUDE.md  README.md  build_viewer.py  combine_metadata.py  core_types.py  crop_utils.py  dpi_utils.py  ffmpeg_builder.py  image_utils.py  log_viewer.py  main.py  main_simple.py  misc.py  package.json  path_utils.py  persistent_output.py  pyproject.toml  sequence_processor.py  simple_logger.py  tool_utils.py
.repomap.tags.cache.v1/: cache.db
src/c4d2pixi/: __init__.py  config.py
src/c4d2pixi/cli/: main.py  metadata.py
src/c4d2pixi/core/: mapping.py  types.py
src/c4d2pixi/processing/: crop.py  ffmpeg.py  image.py  sequence.py
src/c4d2pixi/utils/: dpi.py  path.py  subprocess.py
src/ss_image_processor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ss_image_processor/cli/: main.py  viewer.py
src/ss_image_processor/core/: constants.py  types.py
src/ss_image_processor/processing/: __init__.py  crop.py  sequence.py
src/ss_image_processor/tools/: __init__.py  check.py
src/ss_image_processor/utils/: json.py  subprocess.py
tests/: test_alpha_exists.py  test_combine_metadata.py  test_log_viewer.py  test_persistent_output.py  test_png_avif_alpha.py
viewer/: frames  index.html  manifest.json
